domain/src/main/java/com/example/domain/errors/GlobalError.kt
package com.example.domain.errors

import com.example.domain.util.Error

enum class GlobalError : Error {
    UNKNOWN_ERROR,
    NO_SUCH_USER
}